crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@76.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a' <-> 'b & d'::tsquery;"
---
SelectStmt@0..32
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    AExpr@7..31
      AConst@7..10
        Sconst@7..10 "'a'"
      Whitespace@10..11 " "
      Op@11..14 "<->"
      Whitespace@14..15 " "
      TypeCast@15..31
        AConst@15..22
          Sconst@15..22 "'b & d'"
        Typecast@22..24 "::"
        TypeName@24..31
          Ident@24..31 "tsquery"
  Ascii59@31..32 ";"

