crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@78.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a & g' <-> 'b | d'::tsquery;"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    AExpr@7..35
      AConst@7..14
        Sconst@7..14 "'a & g'"
      Whitespace@14..15 " "
      Op@15..18 "<->"
      Whitespace@18..19 " "
      TypeCast@19..35
        AConst@19..26
          Sconst@19..26 "'b | d'"
        Typecast@26..28 "::"
        TypeName@28..35
          Ident@28..35 "tsquery"
  Ascii59@35..36 ";"

