crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@79.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a & g' <-> 'b <-> d'::tsquery;"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    AExpr@7..37
      AConst@7..14
        Sconst@7..14 "'a & g'"
      Whitespace@14..15 " "
      Op@15..18 "<->"
      Whitespace@18..19 " "
      TypeCast@19..37
        AConst@19..28
          Sconst@19..28 "'b <-> d'"
        Typecast@28..30 "::"
        TypeName@30..37
          Ident@30..37 "tsquery"
  Ascii59@37..38 ";"

